// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`lpa questionnaires routes /appeals/:appealId/lpa-questionnaires/:lpaQuestionnaireId GET gets a single lpa questionnaire with an outcome of Complete 1`] = `
{
  "agent": {
    "email": "test@136s7.com",
    "firstName": "John",
    "lastName": "Smith",
    "organisationName": "Smith Inc.",
    "phoneNumber": "09876 543 210",
    "serviceUserId": 1,
  },
  "appealId": 3,
  "appealReference": "1345264",
  "appealSite": {
    "addressId": 1,
    "addressLine1": "96 The Avenue",
    "addressLine2": "Leftfield",
    "county": "Kent",
    "postCode": "MD21 5XY",
    "town": "Maidstone",
  },
  "appealType": "Householder",
  "appellant": {
    "email": "test@1367.com",
    "firstName": "Lee",
    "lastName": "Thornton",
    "organisationName": "Thornton LTD",
    "phoneNumber": "01234 567 890",
    "serviceUserId": 1,
  },
  "costsAppliedFor": false,
  "createdAt": "2024-03-25T23:59:59.999Z",
  "documents": {},
  "extraConditions": null,
  "hasExtraConditions": false,
  "healthAndSafety": {
    "details": "There may be no mobile reception at the site",
    "hasIssues": true,
  },
  "isConservationArea": true,
  "isCorrectAppealType": true,
  "listedBuildingDetails": [
    {
      "affectsListedBuilding": false,
      "id": 1,
      "listEntry": "1",
    },
    {
      "affectsListedBuilding": true,
      "id": 2,
      "listEntry": "2",
    },
  ],
  "localPlanningDepartment": "Maidstone Borough Council",
  "lpaCode": "MAID",
  "lpaNotificationMethods": [
    {
      "name": "A site notice",
    },
  ],
  "lpaQuestionnaireId": 1,
  "planningApplicationReference": "48269/APP/2021/1482",
  "procedureType": "Written",
  "receivedAt": "2024-06-24T00:00:00.000Z",
  "siteAccessRequired": {
    "details": "There is a tall hedge around the site which obstructs the view of the site",
    "isRequired": true,
  },
  "submittedAt": "2024-06-24T00:00:00.000Z",
  "validation": {
    "outcome": "Complete",
  },
}
`;

exports[`lpa questionnaires routes /appeals/:appealId/lpa-questionnaires/:lpaQuestionnaireId GET gets a single lpa questionnaire with an outcome of Incomplete 1`] = `
{
  "agent": {
    "email": "test@136s7.com",
    "firstName": "John",
    "lastName": "Smith",
    "organisationName": "Smith Inc.",
    "phoneNumber": "09876 543 210",
    "serviceUserId": 1,
  },
  "appealId": 3,
  "appealReference": "1345264",
  "appealSite": {
    "addressId": 1,
    "addressLine1": "96 The Avenue",
    "addressLine2": "Leftfield",
    "county": "Kent",
    "postCode": "MD21 5XY",
    "town": "Maidstone",
  },
  "appealType": "Householder",
  "appellant": {
    "email": "test@1367.com",
    "firstName": "Lee",
    "lastName": "Thornton",
    "organisationName": "Thornton LTD",
    "phoneNumber": "01234 567 890",
    "serviceUserId": 1,
  },
  "costsAppliedFor": false,
  "createdAt": "2024-03-25T23:59:59.999Z",
  "documents": {},
  "extraConditions": null,
  "hasExtraConditions": false,
  "healthAndSafety": {
    "details": "There may be no mobile reception at the site",
    "hasIssues": true,
  },
  "isConservationArea": true,
  "isCorrectAppealType": true,
  "listedBuildingDetails": [
    {
      "affectsListedBuilding": false,
      "id": 1,
      "listEntry": "1",
    },
    {
      "affectsListedBuilding": true,
      "id": 2,
      "listEntry": "2",
    },
  ],
  "localPlanningDepartment": "Maidstone Borough Council",
  "lpaCode": "MAID",
  "lpaNotificationMethods": [
    {
      "name": "A site notice",
    },
  ],
  "lpaQuestionnaireId": 1,
  "planningApplicationReference": "48269/APP/2021/1482",
  "procedureType": "Written",
  "receivedAt": "2024-06-24T00:00:00.000Z",
  "siteAccessRequired": {
    "details": "There is a tall hedge around the site which obstructs the view of the site",
    "isRequired": true,
  },
  "submittedAt": "2024-06-24T00:00:00.000Z",
  "validation": {
    "incompleteReasons": [
      {
        "name": {
          "name": "Documents or information are missing",
        },
        "text": [
          "Policy is missing",
        ],
      },
      {
        "name": {
          "name": "Other",
        },
        "text": [
          "Addresses are incorrect or missing",
        ],
      },
    ],
    "outcome": "Incomplete",
  },
}
`;

exports[`lpa questionnaires routes /appeals/:appealId/lpa-questionnaires/:lpaQuestionnaireId GET gets a single lpa questionnaire with no outcome 1`] = `
{
  "agent": {
    "email": "test@136s7.com",
    "firstName": "John",
    "lastName": "Smith",
    "organisationName": "Smith Inc.",
    "phoneNumber": "09876 543 210",
    "serviceUserId": 1,
  },
  "appealId": 1,
  "appealReference": "1345264",
  "appealSite": {
    "addressId": 1,
    "addressLine1": "96 The Avenue",
    "addressLine2": "Leftfield",
    "county": "Kent",
    "postCode": "MD21 5XY",
    "town": "Maidstone",
  },
  "appealType": "Householder",
  "appellant": {
    "email": "test@1367.com",
    "firstName": "Lee",
    "lastName": "Thornton",
    "organisationName": "Thornton LTD",
    "phoneNumber": "01234 567 890",
    "serviceUserId": 1,
  },
  "costsAppliedFor": false,
  "createdAt": "2024-03-25T23:59:59.999Z",
  "documents": {},
  "extraConditions": null,
  "hasExtraConditions": false,
  "healthAndSafety": {
    "details": "There may be no mobile reception at the site",
    "hasIssues": true,
  },
  "isConservationArea": true,
  "isCorrectAppealType": true,
  "listedBuildingDetails": [
    {
      "affectsListedBuilding": false,
      "id": 1,
      "listEntry": "1",
    },
    {
      "affectsListedBuilding": true,
      "id": 2,
      "listEntry": "2",
    },
  ],
  "localPlanningDepartment": "Maidstone Borough Council",
  "lpaCode": "MAID",
  "lpaNotificationMethods": [
    {
      "name": "A site notice",
    },
  ],
  "lpaQuestionnaireId": 1,
  "planningApplicationReference": "48269/APP/2021/1482",
  "procedureType": "Written",
  "receivedAt": "2024-06-24T00:00:00.000Z",
  "siteAccessRequired": {
    "details": "There is a tall hedge around the site which obstructs the view of the site",
    "isRequired": true,
  },
  "submittedAt": "2024-06-24T00:00:00.000Z",
}
`;
